<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="?attr/weatherBackground"
        android:alpha="0.4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/WeatherIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:elevation="8dp"
        android:src="@drawable/clear_day"
        app:layout_constraintBottom_toTopOf="@id/dataPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/dataPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_layout"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:padding="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/city"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/City"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="14dp"
                android:gravity="center"
                android:hint="@string/writeCity"
                android:inputType="text"
                android:textColor="@color/black"/>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">
            
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/latitude"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Latitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="14dp"
                android:gravity="center"
                android:hint="@string/hint"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/longitude"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/Longitude"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="14dp"
                android:gravity="center"
                android:hint="@string/hint2"
                android:inputType="numberDecimal|numberSigned"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/sea_level_pressure"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/SeaLevelPresure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="8dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/Wind_Direction"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/WindDirection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="8dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/Wind_Speed"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/WindSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="8dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/Temperature"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Temperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="8dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts"
                android:padding="8dp"
                android:gravity="center"
                android:text="@string/Time"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/Time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_layouts2"
                android:padding="8dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"/>
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/dataPanel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/update"
        android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>